--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">" BucketDrops"</string>
+    <string name="str_add_drop">Add a Drop</string>
+    <string name="str_add_drop_btn">Add a drop</string>
+    <string name="hint_et_drop">What is it?</string>
+    <string name="add_drop">Add a Drop</string>
 </resources>
